# aastk

./: .gitignore  MANIFEST.in  README.md  environment.yml  meta.yaml  pyproject.toml  recipe.yaml  requirements.txt  setup.py
.github/: release.yml
.github/workflows/: release.yml
aastk/: .gitignore  __init__.py  __main__.py  annotate.py  asm_clust.py  casm.py  cli.py  cli_new.py  cugo.py  database.py  log.py  pasr.py  predicted_proteins.faa  rasr.py  rasr_multiple.py  util.py  version.py
aastk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
aastk/prelim/: aastk_cli.py  cugo.py  gff_parse.py  gff_parse_GPT.py  util_repo.py
aastk/results_genecalling/: GCF_001273775.proteins.faa
aastk/results_pasr_trail/: GCF_001273775_seed_db_columns.json
aastk/test_data/: GCF_001273775.faa  GCF_001273775.genes.tsv  nxrE.yaml  nxrE_r226.faa
aastk/yaml/: cog_colors.yaml
