[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aastk"
dynamic = ["version"]
description = "Toolkit for analyses of amino acid sequences, optimized for GlobDB compatibility"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    {name = "Daan Speth", email = "daan.speth@univie.ac.at"}, 
    {name = "Marcel Rennig", email = "marcel.rennig@univie.ac.at"}
]
requires-python = ">=3.13"
dependencies = [
    "contourpy>=1.3.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "opentsne>=1.0.2",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
]
keywords = [
    "proteins",
    "databases",
    "bioinformatics"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[tool.setuptools.dynamic]
version = { attr = "aastk.version.__version__" }

[project.urls]
Homepage = "https://github.com/dspeth/aastk"
Documentation = "https://globdb.org/aastk"
Source = "https://github.com/dspeth/aastk"
Tracker = "https://github.com/dspeth/aastk/issues"

[project.scripts]
aastk = "aastk.__main__:main"

[tool.setuptools]
packages = ["aastk"]
include-package-data = true
